# doc

./: .dockerignore  00_README.md  01_ARCHITECTURE.md  03_PITFALLS.md  10_M1_foundation.md  CLAUDE.md  LESSONS.md  README.md
backend/: pyproject.toml
backend/migrations/: 0001_init.sql  0002_workspace_archived.sql  0003_workspace_template_import.sql  0005_property_value_versioning.sql  0006_workspace_archive_index.sql  0008_webhooks.sql  0009_change_feed.sql  0010_document_cascade_delete.sql  0011_type_cascade_delete.sql  0012_vault_wallets.sql  0013_exposed_flag.sql  0014_reactions_comments.sql  0015_document_reference.sql  0016_document_title_search.sql  0017_user_secrets.sql  0019_automation.sql  0021_setup_wizard.sql  0022_scalar_property_types.sql  0023_content_template.sql  0024_saved_views.sql  0025_reference_property_type.sql  0026_gallery_sources.sql  0027_user_model.sql  0028_api_keys.sql  0029_api_profile_admin.sql  0030_document_slug.sql  0031_remote_points.sql  0032_backup_jobs.sql
backend/tests/: conftest.py  test_admin_users.py  test_apikeys.py  test_apply.py  test_auth.py  test_backup_service.py  test_backup_worker.py  test_block_documents.py  test_blocks.py  test_change_feed.py  test_config.py  test_content_template.py  test_crypto.py  test_db_dump.py  test_documents.py  test_export.py  test_health.py  test_mcp.py  test_mcp_tools.py  test_oidc.py  test_properties.py  test_property_values.py  test_reference_property.py  test_references.py  test_remote.py  test_scalar_property_types.py  test_secrets.py  test_substitution.py  test_template_import.py  (+5 more)
(+217 files in other folders)
