[project]
name = "docflow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "argon2-cffi>=23.1.0",
    "authlib>=1.3.2",
    "joserfc>=1.7.1",
    "mcp>=1.0.0",
    "pyyaml>=6.0.3",
    "cryptography>=42.0.0",
    "harpocrate>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.uv.sources]
harpocrate = { url = "https://vault.yoops.org/v1/sdk/by-filename/harpocrate-0.6.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["harpocrate", "harpocrate.*"]
ignore_missing_imports = true
